--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-dom": "latest"
   },
   "devDependencies": {
-    "tailwindcss": "latest",
-    "autoprefixer": "latest",
-    "postcss": "latest"
+    "autoprefixer": "^10.4.21",
+    "postcss": "latest",
+    "tailwindcss": "latest"
   }
 }
