--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "postcss": "latest",
     "tailwindcss": "latest"
